[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/shrek.png" type="Texture" id=1]
[ext_resource path="res://Shrek.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.6491, 156.46 )

[sub_resource type="CircleShape2D" id=2]
radius = 1606.26

[node name="Shrek" type="KinematicBody2D" groups=[
"Shrek",
]]
script = ExtResource( 2 )
velocidad = 300
can_move = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.08749, 17.0423 )
shape = SubResource( 1 )

[node name="TimerSaltos" type="Timer" parent="."]
autostart = true

[node name="AreaDetectar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectar"]
shape = SubResource( 2 )

[connection signal="timeout" from="TimerSaltos" to="." method="_on_TimerSaltos_timeout"]
[connection signal="body_entered" from="AreaDetectar" to="." method="_on_AreaDetectar_body_entered"]
[connection signal="body_exited" from="AreaDetectar" to="." method="_on_AreaDetectar_body_exited"]
